--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,26 @@
 button {
-    /* position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%); */
     padding: 10px;
     background-color: darkslateblue;
     border: none;
     outline: none;
-    font-size: 18px;
+    font-size: 25px;
     text-transform: uppercase;
-    color: deeppink;
-   
+    color: deeppink; 
+    border-radius: 5px;
+    margin: 10px;
+
 } 
+
+button:focus,
+button:hover {
+    background-color: deeppink;
+    color: darkslateblue;
+}
+
+
+.btn {
+position: absolute;
+top: 50%;
+left: 50%;
+transform: translate(-50%, -50%);
+}
